feat: add character sprites and item shop icons